# QTube

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  client_secrets_template.json  library.py  pyproject.toml  requirements.txt  run.py  setup.py  user_params_template.json
QTube/: library.py  run.py
QTube/scripts/: qtube.py
QTube/utils/: checks.py  helpers.py  parsing.py
QTube/utils/youtube/: captions.py  channels.py  playlists.py  videos.py
docs/: user_params_template.json
src/: client_secrets_template.json  library.py  run.py  user_params_template.json
